compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__inconsistent_try_4.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 720
expression: try y = Error(1) try z = Error(1.) Ok(1)

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:18
  │
1 │ try y = Error(1) try z = Error(1.) Ok(1)
  │                  ^^^^^^^^^^^^^^^^^^^^^^^

This returned value has a type incompatible with the previous try expression.
All the try expressions in a block and the final result value must have
the same error type.

Expected type:

    Result(Int, Int)

Found type:

    Result(Int, Float)


